--- a/.gitignore
+++ b/.gitignore
@@ -25,11 +25,11 @@ yarn-debug.log*
 yarn-error.log*
 
 # Local env files
-.env*.local
-.env
-.env.development.local
-.env.test.local
-.env.production.local
+# .env*.local
+# .env
+# .env.development.local
+# .env.test.local
+# .env.production.local
 
 # Vercel
 .vercel
