--- a/.env.local
+++ b/.env.local
@@ -2,6 +2,9 @@
 NEXT_PUBLIC_API_BASE_URL=/api
 NEXT_PUBLIC_BASE_PATH=
 
+# Frontend URL for server-side requests
+NEXT_PUBLIC_FRONTEND_URL=http://localhost:3002
+
 # Auth API Configuration (for user management)
 NEXT_PUBLIC_AUTH_API_BASE_URL=http://localhost:4000/api/auth
 
