--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.541.0",
     "motion": "^12.23.12",
-    "next": "15.5.0",
+    "next": "^15.5.5",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "^19.1.1",
