--- a/.env.local
+++ b/.env.local
@@ -6,7 +6,7 @@ NEXT_PUBLIC_BASE_PATH=
 NEXT_PUBLIC_FRONTEND_URL=http://localhost:3002
 
 # Auth API Configuration (for user management)
-NEXT_PUBLIC_AUTH_API_BASE_URL=http://localhost:4000/api/auth
+NEXT_PUBLIC_AUTH_API_BASE_URL=http://localhost:5000/api/v1
 
 # Backend URL for server-side API calls
 BACKEND_URL=http://localhost:5000
