Add dynamic homepage admin features and improvements

--- a/.env.local
+++ b/.env.local
@@ -1,23 +1,12 @@
-# API Configuration
-NEXT_PUBLIC_API_BASE_URL=/api
-NEXT_PUBLIC_BASE_PATH=
+# Admin Panel Environment Variables
+NEXT_PUBLIC_API_BASE_URL=http://localhost:5000
+NEXT_PUBLIC_WEBSITE_URL=http://localhost:3000
 
-# Frontend URL for server-side requests
-NEXT_PUBLIC_FRONTEND_URL=http://localhost:3002
+# JWT Secret for authentication (if needed)
+JWT_SECRET=your-super-secret-jwt-key-here
 
-# Auth API Configuration (for user management)
-NEXT_PUBLIC_AUTH_API_BASE_URL=http://localhost:4000/api/auth
+# Preview URL secret for signed URLs
+PREVIEW_SECRET=your-preview-secret-here
 
-# Backend URL for server-side API calls
-BACKEND_URL=http://localhost:5000
-
-# Database Configuration (if needed for direct access)
-NEXT_PUBLIC_DATABASE_URL=
-
-# Development Configuration
-NODE_ENV=development
-
-# Admin Panel Configuration
-NEXT_PUBLIC_ADMIN_TITLE=Love of Travel Admin
-NEXT_PUBLIC_ADMIN_VERSION=1.0.0
-
+# Revalidation webhook secret
+REVALIDATE_SECRET=your-revalidation-secret-here
