--- a/.env.local
+++ b/.env.local
@@ -4,6 +4,7 @@ NEXT_PUBLIC_WEBSITE_URL=http://localhost:3000
 
 # JWT Secret for authentication (if needed)
 JWT_SECRET=your-super-secret-jwt-key-here
+NEXT_PUBLIC_FRONTEND_URL=http://localhost:3002
 
 # Auth API Configuration (for user management)
 NEXT_PUBLIC_AUTH_API_BASE_URL=http://localhost:5000/api/v1
