feat: Add login integration and authentication features
- Add login, signup, forgot password, and reset password pages
- Implement authentication components and forms
- Add auth middleware and token management
- Update API client with authentication support
- Add auth styling and user dropdown menu updates
- Include documentation for auth integration and styling fixes

--- a/.env.local
+++ b/.env.local
@@ -1,29 +1,14 @@
-# Admin Panel Environment Variables
-NEXT_PUBLIC_API_BASE_URL=http://localhost:5000
-NEXT_PUBLIC_WEBSITE_URL=http://localhost:3000
+# Development Environment Variables
+# Backend API URL for development
+NEXT_PUBLIC_BACKEND_URL=http://localhost:5000
 
-# JWT Secret for authentication (if needed)
-JWT_SECRET=your-super-secret-jwt-key-here
-NEXT_PUBLIC_FRONTEND_URL=http://localhost:3002
+# Next.js API Base URL (for internal API routes)
+NEXT_PUBLIC_API_BASE_URL=/api
 
-# Auth API Configuration (for user management)
-NEXT_PUBLIC_AUTH_API_BASE_URL=http://localhost:5000/api/v1
+# Authentication API URL (for auth endpoints)
+NEXT_PUBLIC_API_URL=http://localhost:5000/api/v1
 
-# Backend URL for server-side API calls
-BACKEND_URL=http://localhost:5000
-
-# Database Configuration (if needed for direct access)
-NEXT_PUBLIC_DATABASE_URL=
-
-# Development Configuration
-NODE_ENV=development
-
-# Admin Panel Configuration
-NEXT_PUBLIC_ADMIN_TITLE=Love of Travel Admin
-NEXT_PUBLIC_ADMIN_VERSION=1.0.0
-
-# Preview URL secret for signed URLs
-PREVIEW_SECRET=your-preview-secret-here
-
-# Revalidation webhook secret
-REVALIDATE_SECRET=your-revalidation-secret-here
+# Redirect URLs after authentication
+NEXT_PUBLIC_REDIRECT_AFTER_LOGIN=/layout-1/blog/dashboard
+NEXT_PUBLIC_REDIRECT_AFTER_FORGOT_PASSWORD=/login
+NEXT_PUBLIC_REDIRECT_AFTER_RESET_PASSWORD=/login
